--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.20"
 
+      - name: Install dependencies
+        run: go mod tidy
+
       - name: Run the tests
         run: go test -cover ./...
 
@@ -40,8 +43,11 @@ jobs:
         with:
           go-version: "1.20"
 
+      - name: Install dependencies
+        run: go mod tidy
+
       - name: Check formatting
-        run: test -z $(go fmt ./...)
+        run: test -z "$(go fmt ./...)"
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
