--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,8 +5,8 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
-    name: deploy
+  Deploy:
+    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
